# cookiecutter-python-package

./: .coveragerc  .dockerignore  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  git_diff.txt  mkdocs.yml  mutmut_config.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: biskotaki.yaml  del.yml  dependabot.yml  labeler.yml
docs/: conf.py  index.md  index.rst  intendent_audience.rst  modules.rst  spelling_wordlist.txt  why_this_library.rst
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: distro-sem-ver-bump.sh  gen_api_refs_pages.py  lint-local.sh  load-to-rt.sh  mypy.sh  open-doors.sh  parse_version.py  sem-ver-bump.sh  sphinx-process.sh  start-rt.sh  terminal-based-release.sh  update-snapshot-interactive.sh  update-snapshot.sh  visualize-ga-workflow.py
src/cookiecutter_python/{{ cookiecutter.project_slug }}/: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
src/cookiecutter_python/{{ cookiecutter.project_slug }}/.github/: labeler.yml
src/cookiecutter_python/{{ cookiecutter.project_slug }}/.github/workflows/: build-n-test.yml  cicd.yml  codecov-upload.yml  labeler.yaml  policy_docs.yml  policy_lint.yml  signal-deploy.yml  test.yaml
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs/: index.rst  spelling_wordlist.txt
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs-mkdocs/: build-process_DAG.md  cicd.md  cicd_mermaid.md  dockerfile_mermaid.md  index.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs-mkdocs/dev_guides/: index.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs-sphinx/: conf.py  spelling_wordlist.txt
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs-sphinx/contents/: 10_introduction.rst  40_modules.rst
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs/contents/: 20_why_this_package.rst  {{ cookiecutter.pkg_name }}.rst
src/cookiecutter_python/{{ cookiecutter.project_slug }}/docs_mkdocs/: build-process_DAG.md  cli.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/scripts/: gen_api_refs_pages.py  parse_version.py  visualize-dockerfile.py  visualize-ga-workflow.py
src/cookiecutter_python/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.pkg_name }}/: __init__.py  __main__.py  _logging.py  cli.py  fixtures.py
src/cookiecutter_python/{{ cookiecutter.project_slug }}/tests/: smoke_test.py  test_cli.py  test_invoking_cli.py  test_my_fixture.py
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.docs_builder == "mkdocs" %}docs{% else %}PyGen_TO_DELETE{% endif %}/: cicd_mermaid.md  index.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.docs_builder == "mkdocs" %}docs{% else %}PyGen_TO_DELETE{% endif %}/topics/development/: build_process_DAG.md  cicd.md  index.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.docs_builder == "sphinx" %}docs{% else %}PyGen_TO_DELETE{% endif %}/: spelling_wordlist.txt
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.docs_builder == "sphinx" %}docs{% else %}PyGen_TO_DELETE{% endif %}/contents/: 30_usage.rst
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.include_observability == "yes" %}observability{% else %}PyGen_TO_DELETE_OBSERVABILITY{% endif %}/: README.md
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.include_observability == "yes" %}observability{% else %}PyGen_TO_DELETE_OBSERVABILITY{% endif %}/grafana/datasources/: loki.yml
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.include_observability == "yes" %}observability{% else %}PyGen_TO_DELETE_OBSERVABILITY{% endif %}/loki/: loki-config.yml
src/cookiecutter_python/{{ cookiecutter.project_slug }}/{% if cookiecutter.include_observability == "yes" %}observability{% else %}PyGen_TO_DELETE_OBSERVABILITY{% endif %}/promtail/: promtail-config.yml
src/cookiecutter_python_package/{{ cookiecutter.project_slug }}/: .pylintrc  setup.cfg  tox.ini
src/cookiecutter_python_package/{{ cookiecutter.project_slug }}/scripts/: read_required.py
src/cookiecutter_python_package/{{ cookiecutter.project_slug }}/tests/: smoke_test.py
tests/: conftest.py  delme.py  test_build_backend_sdist.py  test_ci_pipeline_generation.py  test_cli.py  test_generate.py  (+24 more)
tests/data/snapshots/biskotaki-interactive/: .coveragerc  .prospector.yml  CHANGELOG.rst  Dockerfile  README.rst  pyproject.toml  tox.ini
tests/data/snapshots/biskotaki-interactive/.github/: labeler.yml
tests/data/snapshots/biskotaki-interactive/.github/workflows/: cicd.yml  codecov-upload.yml  policy_docs.yml  signal-deploy.yml  test.yaml
tests/data/snapshots/biskotaki-interactive/docs/: conf.py  spelling_wordlist.txt
tests/data/snapshots/biskotaki-interactive/docs/contents/: 10_introduction.rst  20_why_this_package.rst  30_usage.rst  biskotaki.rst
tests/data/snapshots/biskotaki-interactive/scripts/: parse_version.py  visualize-dockerfile.py  visualize-ga-workflow.py
tests/data/snapshots/biskotaki-interactive/src/biskotaki/: _logging.py
tests/data/snapshots/biskotaki-no-input/: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  tox.ini
tests/data/snapshots/biskotaki-no-input/.github/: labeler.yml
tests/data/snapshots/biskotaki-no-input/.github/workflows/: cicd.yml  codecov-upload.yml  labeler.yaml  test.yaml
tests/data/snapshots/biskotaki-no-input/docs/: conf.py  index.rst  spelling_wordlist.txt
tests/data/snapshots/biskotaki-no-input/docs/contents/: 10_introduction.rst  40_modules.rst
tests/data/snapshots/biskotaki-no-input/scripts/: visualize-dockerfile.py  visualize-ga-workflow.py
tests/data/snapshots/biskotaki-no-input/src/biskotaki/: _logging.py
tests/data/snapshots/biskotaki-no-input/tests/: smoke_test.py
(+234 files in other folders)
