[project]
name = "cookiecutter-python"
version = "2.5.0"
description = "1-click Generator of Python Project, from Template with streamlined \"DevOps\" using a powerful CI/CD Pipeline."
authors = ["Konstantinos Lampridis <k.lampridis@hotmail.com>"]
maintainers = ["Konstantinos Lampridis <k.lampridis@hotmail.com>"]
readme = "README.md"
license = "AGPL-3.0-only"

homepage = "https://github.com/boromir674/cookiecutter-python-package"
repository = "https://github.com/boromir674/cookiecutter-python-package"
documentation = "https://python-package-generator.readthedocs.io/"


## ALLOWED PYTHON ##
requires-python = ">=3.8, <3.13"

## DEPEN
dependencies = [
    "attrs>=21.0.0,<22",
    ## current 25.3.0  --> py >= 3.8
    ## 22.1.0  --> py >=3.5
    ## 21.1.0  --> python_requires=">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*",

    "click>=8.0.0,<9.0.0",
    ## current 8.1.8 --> python = ">=3.7"
    #   - "colorama; platform_system == 'Windows'",
    #   - "importlib-metadata; python_version < '3.8'",
    ## our min 8.0.0 --> py >= 3.6
    #   - colorama; platform_system == 'Windows'

    "cookiecutter>=2.0.0,<3.0.0",
    ## current 2.6.0 requires python >=3.7 and
    #   - Jinja2>=2.7,<4.0.0
    #   - click>=7.0,<9.0.0
    #   - pyyaml>=5.3.1
    #   - requests>=2.23.0
    ## our min 2.0.0 requires python >=3.6 and
    #   - Jinja2>=2.7,<4.0.0
    #   - click>=7.0,<9.0.0
    #   - pyyaml>=5.3.1
    #   - requests>=2.23.0

    "gitpython>=3.0.0,<4.0.0",
    #     gitdb is from same org
    ## current 3.1.44 -> python_requires = ">=3.7"
    #   - gitdb>=4.0.1,<5
    ## 3.1.30 min version throughout whole development
    #   - gitdb>=4.0.1,<5
    ## our min 3.0.0 -> python_requires='>=3.0, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*'
    #   - gitdb2 (>=2.0.0)
    #   - gitdb>=0.6.4
    #   - ddt>=1.1.1

    "jinja2>=3.0.0,<4.0.0",

    "pyyaml>=5.3.1,<7.0.0",
    # 6.0.2: python_requires='>=3.8'
    # 6.0.0: python_requires='>=3.6'
    "questionary>=1.10.0,<2.0.0",
    ## current: 2.1.0  -> python = ">=3.8"
    #   - prompt_toolkit = ">=2.0,<4.0"
    ## our min: 1.10.0 -> python = "^3.6"
    #   - prompt_toolkit = ">=2.0,<4.0"

    "requests>=2.0.0,<3.0.0",
    ## current 2.32.3 --> python >=3.8
    #   - "charset_normalizer>=2,<4",
    #   - "idna>=2.5,<4",
    #   - "urllib3>=1.21.1,<3",
    #   - "certifi>=2017.4.17",
    # requests 2.0 has no 3rd-party deps !! (nice job!)
    # and seems to support even python 2.6 !

    "requests-futures>=1.0.2,<2.0.0",
    ## 2.1K stars: current 1.0.2 -> does not have python_requires !!
    # tested on CI matrix though ['3.9', '3.10', '3.11', '3.12', "3.13"]
    #   - 'requests>=1.2.0'
    # 1.0.1 -> CI ['3.8', '3.9', '3.10', '3.11']

    "software-patterns>=1.3.0,<2.0.0",
    # [3.6, 3.10]
]   
