[metadata]
## Setuptools specific information
name = cookiecutter_python
version = 0.6.1
# renders on pypi as subtitle
description = Yet another modern Python Package (pypi) with emphasis in CI/CD and automation 
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE
platforms = Linux, Darwin
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com

# represents the web home page of the project
url = https://github.com/boromir674/cookiecutter-python-package

download_url = https://github.com/boromir674/cookiecutter-python-package/archive/v0.6.1.tar.gz

## PyPi specific information
project_urls =
    Documentation = https://cookiecutter-python-package.readthedocs.io/
    Bug Tracker = https://github.com//cookiecutter-python-package/issues
    Source Code = https://github.com/boromir674/cookiecutter-python-package
    ; Changelog = https://cookiecutter-python-package.readthedocs.io/en/stable/changelog.html

keywords = python library
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:


[options.packages.find]
where=src


[options.extras_require]
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
    cookiecutter
typing =
    mypy


[options.package_data]
cookiecutter_python_package =
    py.typed


; [options.entry_points]
; console_scripts =
    ; <executable_name> = cookiecutter_python_package.__main__:entrypoint


# Influence what should be not flagged as an error, if not included in the distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    docs/static/*
    requirements/*
    scripts/*.py
    tox.ini
    .bettercodehub.yml
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml


#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 120
exclude = .tox,venv,env,env-dev


[isort]
line_length = 120
skip = .tox,venv,env,env-dev
default_section = THIRDPARTY
known_first_party = src,tests


[semantic_release]
version_variable = src/cookiecutter_python/__init__.py:__version__
# version_source=tag
version_source=source
upload_to_pypi=false
upload_to_release=false
