[metadata]
## Setuptools specific information
name = cookiecutter_python
version = 1.2.0
# renders on pypi as subtitle
description = Yet another modern Python Package (pypi) with emphasis on CI/CD and automation.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPLv3
license_files = LICENSE
platforms = Linux, Darwin
author = Konstantinos Lampridis
author_email = k.lampridis@hotmail.com

# represents the web home page of the project
url = https://github.com/boromir674/cookiecutter-python-package

download_url = https://github.com/boromir674/cookiecutter-python-package/archive/v1.2.0.tar.gz

## PyPi specific information
project_urls =
    Bug Tracker = https://github.com/boromir674/cookiecutter-python-package/issues
    CI: Github Actions = https://github.com/boromir674/cookiecutter-python-package/actions
    Documentation = https://python-package-generator.readthedocs.io/
    Source Code = https://github.com/boromir674/cookiecutter-python-package
    ; TODO Improve: add changelog in Docs and use that link below
    ; eg: https://cookiecutter-python-package.readthedocs.io/en/stable/changelog.html
    Changelog = https://github.com/boromir674/cookiecutter-python-package/blob/master/CHANGELOG.rst
    Code of Conduct = https://github.com/boromir674/cookiecutter-python-package/blob/master/CONTRIBUTING.rst
    ; Mailing lists =

keywords = python package template, python package generator, cookiecutter, python package
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed


[options]
python_requires = >= 3.6
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    cookiecutter
    software_patterns >= 1.2.1
    asyncio
    requests-futures


[options.packages.find]
where=src


[options.extras_require]
check_pypi =
    ask-pypi >= 0.6.0
docs =
    furo>=2021.08.31
    sphinx~=4.0
    sphinx-argparse-cli>=1.5
    sphinx-autodoc-typehints>=1.10
    sphinx-rtd-theme==0.5.0
    sphinxcontrib-spelling
test =
    pytest>=6.2.4
    pytest-cov>=2.12
    pytest-xdist>=1.34
    pytest-explicit ~= 1.0.1
    pytest-click
    software_patterns
    cookiecutter
    tox
typing =
    mypy
    types-requests
    pytest >= 6.2.4
    pytest-click


[options.package_data]
cookiecutter_python =
    py.typed


[options.entry_points]
console_scripts =
    generate-python = cookiecutter_python.__main__:main


[tool:pytest]
markers =
    slow: Marks a slow test
    integration: Tests applicable to a newly Generated Project, running with tox
    network_bound: Require internet connection
testpaths = tests
explicit-only =
    slow
    integration
    network_bound

# Influence what should be not flagged as an error, if not included in the distribution (ie sdist distribution)
[check-manifest]
ignore =
    docs/*
    requirements/*
    scripts/*.py
    tox.ini
    .bettercodehub.yml
    .circleci/config.yml
    .coveragerc
    .DS_Store
    .gitignore
    .prospector.yml
    .pylintrc
    .readthedocs.yml
    .scrutinizer.yml
    .travis.yml


[semantic_release]
version_variable = src/cookiecutter_python/__init__.py:__version__
# version_source=tag
version_source=source
upload_to_pypi=false
upload_to_release=false
